Changed the wine index.  Trying to get the search form to align correctly as a responsive form.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -26,6 +26,10 @@
   .hero-unit h1 { font-size: 40px; }
 } 
 
+.form-responsive {
+  @extends .form-inline;
+}
+
 img {
   max-width: 100%;
 }
